Remove brands' names.

--- a/amazon_scraping.ipynb
+++ b/amazon_scraping.ipynb
@@ -53,8 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parent_path = r\"C:\\Users\\nicarang\\OneDrive - Publicis Groupe\\Documentos\\Digitas\\P&G\\Social Listening\\Pantene\\Madonna ROLA\".replace(\"\\\\\", \"/\")\n",
-    "parent_path = r\"C:\\Users\\nicarang\\OneDrive - Publicis Groupe\\Documentos\\Digitas\\P&G\\Social Listening\\H&S\\Severe deep dive\".replace(\"\\\\\", \"/\")"
+    "parent_path = r\"\".replace(\"\\\\\", \"/\")"
    ]
   },
   {
@@ -110,8 +109,8 @@
     "\n",
     "# brand_producs = []\n",
     "# for i in df[df['Stars']==5]['Product']:\n",
-    "#     if (re.search(r'head and shoulders', i, flags=re.IGNORECASE)) or (re.search(r'head & shoulders', i, flags=re.IGNORECASE)) or (re.search(r'. head&shoulders', i, flags=re.IGNORECASE)):\n",
-    "#     # if (re.search(r'pantene', i, flags=re.IGNORECASE)) and (re.search(r'bamb.', i, flags=re.IGNORECASE) or re.search(r'nutre y crece', i, flags=re.IGNORECASE)): # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
+    "#     if (re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE)):\n",
+    "#     # if (re.search(r'', i, flags=re.IGNORECASE)) and (re.search(r'bamb.', i, flags=re.IGNORECASE) or re.search(r'nutre y crece', i, flags=re.IGNORECASE)): # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
     "#         brand_producs.append(i)\n",
     "\n",
     "\n",
@@ -129,7 +128,7 @@
     "\n",
     "brand_producs = []\n",
     "for i in df['Product']:\n",
-    "    if ((re.search(r'head and shoulders', i, flags=re.IGNORECASE)) or (re.search(r'head & shoulders', i, flags=re.IGNORECASE)) or (re.search(r'. head&shoulders', i, flags=re.IGNORECASE))) and \\\n",
+    "    if ((re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE))) and \\\n",
     "        ((re.search(r'colágeno', i, flags=re.IGNORECASE)) or (re.search(r'menta', i, flags=re.IGNORECASE))):\n",
     "        brand_producs.append(i)\n",
     "\n",
@@ -158,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Save a filtered DataFrame\n",
-    "df_filtered.to_excel(os.path.join(parent_path,\"h&s_severe_amazon_oct_{}_{}_{}.xlsx\".format(datetime.today().year,datetime.today().month,datetime.today().day)), index=False)"
+    "df_filtered.to_excel(os.path.join(parent_path,\"_{}_{}_{}.xlsx\".format(datetime.today().year,datetime.today().month,datetime.today().day)), index=False)"
    ]
   },
   {
@@ -284,7 +283,7 @@
     "counts = np.array(X.sum(axis=0)).flatten()\n",
     "counts_dict = {word: count for word, count in zip(vocab, counts)}\n",
     "\n",
-    "mask = np.array(Image.open(r\"C:\\Users\\nicarang\\OneDrive - Publicis Groupe\\Documentos\\Digitas\\P&G\\Social Listening\\H&S\\Alaska\\cloud.png\"))"
+    "mask = np.array(Image.open(r\"\\cloud.png\"))"
    ]
   },
   {
@@ -423,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(os.path.join(parent_path,\"shampoo_biotina_y_colageno_2023_4_18.xlsx\".replace(\"\\\\\", \"/\")))\n",
+    "df = pd.read_excel(os.path.join(parent_path,\"\".replace(\"\\\\\", \"/\")))\n",
     "print(df.shape)\n",
     "df.head()"
    ]
@@ -567,7 +566,7 @@
     "\n",
     "#brand_df = brand_df.drop([4,5,7,8,9,10,11,13]).reset_index(drop=True)\n",
     "\n",
-    "brand_df.to_excel(os.path.join(parent_path,\"stella_products_{}_{}_{}.xlsx\".format(datetime.today().year,datetime.today().month,datetime.today().day)), index=False)\n",
+    "brand_df.to_excel(os.path.join(parent_path,\"_{}_{}_{}.xlsx\".format(datetime.today().year,datetime.today().month,datetime.today().day)), index=False)\n",
     "print(brand_df.shape)\n",
     "brand_df"
    ]
