--- a/meli_scraping.ipynb
+++ b/meli_scraping.ipynb
@@ -526,7 +526,7 @@
     "brand_producs = []\n",
     "brand_prices = []\n",
     "for i in range(df.__len__()):\n",
-    "    if (re.search('head.', df.loc[i,'Product'], flags=re.IGNORECASE)) or (re.search('h&s.', df.loc[i,'Product'], flags=re.IGNORECASE)) or (re.search('head & shoulders.', df.loc[i,'Product'], flags=re.IGNORECASE)):\n",
+    "    if (re.search('', df.loc[i,'Product'], flags=re.IGNORECASE)) or (re.search('', df.loc[i,'Product'], flags=re.IGNORECASE)) or (re.search('', df.loc[i,'Product'], flags=re.IGNORECASE)):\n",
     "        count += 1\n",
     "        brand_producs.append(df.loc[i,'Product'])\n",
     "        brand_prices.append(df.loc[i,'Price'])\n",
