--- a/amazon_scraping.ipynb
+++ b/amazon_scraping.ipynb
@@ -110,7 +110,7 @@
     "# brand_producs = []\n",
     "# for i in df[df['Stars']==5]['Product']:\n",
     "#     if (re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE)) or (re.search(r'', i, flags=re.IGNORECASE)):\n",
-    "#     # if (re.search(r'', i, flags=re.IGNORECASE)) and (re.search(r'bamb.', i, flags=re.IGNORECASE) or re.search(r'nutre y crece', i, flags=re.IGNORECASE)): # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
+    "#     # if (re.search(r'', i, flags=re.IGNORECASE)) and (re.search(r'bamb.', i, flags=re.IGNORECASE) or re.search(r'', i, flags=re.IGNORECASE)): # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
     "#         brand_producs.append(i)\n",
     "\n",
     "\n",
@@ -331,7 +331,7 @@
    "source": [
     "# Competition: competition brands scraping and then concatenate DataFrames.\n",
     "\n",
-    "comp = [\"L'oréal\", \"OGX\", \"Tío Nacho\"]\n",
+    "comp = [\"\", \"\", \"\"]\n",
     "files = os.listdir(parent_path)[1::]\n",
     "df_competition = pd.DataFrame()\n",
     "\n",
@@ -558,7 +558,7 @@
     "\n",
     "brand_producs = []\n",
     "for i in df['Product']:\n",
-    "    if (re.search(r'colágeno.', i, flags=re.IGNORECASE) or re.search(r'nutre y revitaliza', i, flags=re.IGNORECASE) or re.search(r'nutre & revitaliza', i, flags=re.IGNORECASE)) and (re.search(r'pantene', i, flags=re.IGNORECASE)) and not (re.search(r'bamb', i, flags=re.IGNORECASE) or re.search(r'nutrient blend.', i, flags=re.IGNORECASE)) : # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
+    "    if (re.search(r'colágeno.', i, flags=re.IGNORECASE) or re.search(r'', i, flags=re.IGNORECASE) or re.search(r'', i, flags=re.IGNORECASE)) and (re.search(r'', i, flags=re.IGNORECASE)) and not (re.search(r'bamb', i, flags=re.IGNORECASE) or re.search(r'nutrient blend.', i, flags=re.IGNORECASE)) : # or (re.search(r'[^bamboo].', i, flags=re.IGNORECASE))\n",
     "        brand_producs.append(i)\n",
     "\n",
     "\n",
